Enhance build_release.sh to create a complete app bundle structure for AudioCascade, including executable, Info.plist, and resources. Update Info.plist with static values and improve localization by adding menu options in English, German, and French. Refactor AppDelegate to support context menu actions for opening and quitting the app, and update SettingsView for better organization and user experience.

--- a/AudioCascade/Resources/Localizations/de.lproj/Localizable.strings
+++ b/AudioCascade/Resources/Localizations/de.lproj/Localizable.strings
@@ -55,3 +55,7 @@
 "alert_cancel" = "Abbrechen";
 "alert_reset" = "Zurücksetzen";
 "alert_clear" = "Entfernen";
+
+// Menu
+"menu_open" = "AudioCascade öffnen";
+"menu_quit" = "Beenden";
